Arreglo del favicon

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ una clase .link*/
 /* En el caso de querer seleccionar un id se lo realiza
 con un hash # */
 
-#portafolio
+#portfolio
 {
     background: #777777;
 }
