--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ Gold:
 body
 {
     font-family: Lato, Arial, Helvetica, sans-serif;
-    /* background-color: #252524; */
+     background-color: #252524; 
 }
 
 h1,
@@ -80,11 +80,14 @@ h1 strong
 .hero
 {
     height: 300px;
-    background-image: url('../images/hero.jpg');
+    /* background-image: url('../images/hero.jpg'); */
+    background-image: url('https://i.imgur.com/MqcfDC3.jpg');
     background-color: #191919;
     background-size: 500px 400px;
     background-repeat: no-repeat;
     background-position-x: right;
+    padding: 25px;
+    
 
 }
 
@@ -100,6 +103,7 @@ h1 strong
     border-top-style: solid; */
     border: 1px solid gray;
     border-radius: 10px;
+
 
 }
 
