--- a/css/styles.css
+++ b/css/styles.css
@@ -369,6 +369,32 @@ h2
     height: inherit;
     flex-wrap: inherit;
 }
+
+/* Desktop first: MQ se empieza desde el mas grande */
+
+@media screen and (max-width: 1024px)
+{
+
+}
+
+@media screen and (max-width: 768px){
+    body
+    {
+        border: 10px solid pink;
+    }
+}
+
+@media screen and (max-width: 480px)
+{
+    
+}
+
+@media screen and (max-width: 320px)
+{
+    
+}
+
+
 /* .flexbox
 {
     display: flex;
