--- a/css/styles.css
+++ b/css/styles.css
@@ -272,11 +272,11 @@ h2
     flex-wrap: wrap;
 }
 
-
+/* 
 .social
 {
   
-}
+} */
 
 .social_link
 {
@@ -366,6 +366,8 @@ h2
 {
     /* border: 1px solid red; */
     max-width: 1400px;
+    /* width: 100%; */
+    flex: 1;
     margin: 0 auto;
     display: inherit;
     justify-content: inherit;
@@ -381,11 +383,29 @@ h2
 
 }
 
-@media screen and (max-width: 768px){
-    body
+@media screen and (max-width: 767px){
+    .header
     {
-        /* border: 10px solid pink; */
+     display: block;
+     height: auto;   
     }
+
+    .header ol
+    {
+        display: initial;
+    }
+
+    .header ol li
+    {
+        height: 50px;   
+        justify-content: center;
+    }
+
+    .header  .logo
+    {
+        text-align: center;
+    }
+
 }
 
 @media screen and (max-width: 480px)
