Arreglo de distancia entre imagen y testo de portfolio, Ajuste de container 1100px. Responsive experience/event

--- a/css/styles.css
+++ b/css/styles.css
@@ -168,6 +168,7 @@ h2
     display: flex;
     text-align: left;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .project_title
@@ -211,7 +212,7 @@ h2
 .event_list
 {
     display: flex;
-    margin-bottom: 20px;
+    margin: 0 10px 20px 10px;
     flex-wrap: wrap;
 }
 
@@ -220,8 +221,8 @@ h2
 {
     /* border: 1px solid lightgray; */
     border-radius: 10px;
-    margin: 5px;
-    width: 480px;
+    margin: 1%;
+    width: 48%;
     border-radius: 10p;
     flex-shrink: 1;
     overflow: hidden;
@@ -371,7 +372,7 @@ h2
 .container
 {
     /* border: 1px solid red; */
-    max-width: 1400px;
+    max-width: 1100px;
     /* width: 100%; */
     flex: 1;
     margin: 0 auto;
@@ -422,7 +423,7 @@ h2
         text-align: center;
     }
 
-    .portfolio h2
+    h2
     {
         font-size: 1.2em;
     }
@@ -482,6 +483,28 @@ h2
         font-size: .8em;
     }
 
+    .event_list
+    {
+        justify-content: center;
+    }
+
+    .event_list h2
+    {
+        margin: 0;
+    }
+
+    .event
+    {
+        width: auto;
+        flex-shrink: initial;
+        margin-bottom: .8em;
+    }
+
+    .event img
+    {
+        width: 100%;
+    }
+
 }
 
 @media screen and (max-width: 480px)
@@ -490,6 +513,13 @@ h2
     {
         width: auto;
         font-size: 12px;
+    }
+
+    .event_detail
+    {
+        margin: -2em .5em .5em;
+        padding: 1em;
+        font-size: .8em;
     }
     
 }
