--- a/css/styles.css
+++ b/css/styles.css
@@ -99,6 +99,7 @@ h1
 
 }
 
+
 h1 strong
 {
     color: #89623D
@@ -125,24 +126,21 @@ h2
 
 .hero
 {
-    height: 400px;
-    /* background-image: url('../images/hero.jpg'); */
-    /* background-image: url('https://i.imgur.com/MqcfDC3.jpg'); */
+    height: 100%;
     background-color: #252524;
-    /* background-size: 500px 400px;
-    background-repeat: no-repeat; */
-    background-position-x: right;
+    /* background-position-x: right; */
     display: flex;  
     align-items: center;
-    padding: 25px;
+    /* padding: 25px; */
     flex-wrap: wrap;
-    /* border-bottom: 1px solid lightgray; */
     justify-content: space-between;
+    overflow: hidden;
 }
 
 .hero_image
 {
     object-fit: cover;
+ 
 }
 
 .portfolio
@@ -252,7 +250,7 @@ h2
 
 .event img
 {
-    width: 480px;
+    width: 100%;
     height: 200px;
     object-fit: cover;
     border-radius: 5px;
@@ -372,10 +370,10 @@ h2
 .container
 {
     /* border: 1px solid red; */
-    max-width: 1100px;
-    /* width: 100%; */
+    max-width: 1300px;
+     /* width: 100%; */
     flex: 1;
-    /* margin: 0 auto; */
+     margin: 0 auto; 
     display: inherit;
     justify-content: inherit;
     align-items: inherit;
@@ -385,26 +383,56 @@ h2
 
 /* Desktop first: MQ se empieza desde el mas grande */
 
-@media screen and (max-width: 1024px)
-{
-    /* .project_imageWrapper
-    {
-        width: auto;
-    }
-
-    .project_details
-    {
-        width: auto;
-    } */
+@media screen and (max-width: 1200px)
+{  
     
+
     .container
     {
         padding: 0 1em;
+    }
+/* 
+    .hero h1
+    {
+    color: #191919
+    }   */
+
+    .hero
+    {
+        height: auto;
+        position: relative;
+        overflow: hidden;
+        /* padding: 2em; */
+        padding: 2em 1em;     
+    }
+
+    .hero_image
+    {
+        position: absolute;
+        z-index: 1;
+        left: 0;
+        right: 0;
+        top: 0;
+        right: 0;
+        width:100%;
+        
+    }
+
+    
+    h1
+    {
+        font-size: 2em; 
+        z-index: 2;
+        background: rgba(0, 0, 0, 0.4);
     }
 
 }
 
 @media screen and (max-width: 767px){
+
+
+
+
     .header
     {
      display: block;
@@ -511,8 +539,19 @@ h2
 
 }
 
+.html_video
+{
+    /* width: 100%; */
+    max-width: 100%;
+}
+
 @media screen and (max-width: 480px)
 {
+    h1
+    {
+        font-size: 1.5em;
+    }
+
     .project_details
     {
         width: auto;
@@ -555,7 +594,12 @@ h2
 
 @media screen and (max-width: 320px)
 {
-   .social
+    h1
+    {
+        font-size: 1em;
+    }
+
+    .social
    {
        margin: -9px;
    } 
