--- a/css/styles.css
+++ b/css/styles.css
@@ -541,8 +541,30 @@ h2
 
 .html_video
 {
-    /* width: 100%; */
+    width: 100%;
+    /* max-width: 100%; */
+    height: auto;
+}
+
+.youtube_video
+ {
+   /* width: 100%;
     max-width: 100%;
+    height: auto; */
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    /* z-index: 3; */
+}
+
+.flexible_video
+{
+    width: 100%;
+    height: 0;
+    padding-top: 60%;
+    position: relative;
 }
 
 @media screen and (max-width: 480px)
