--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,37 @@ Textos:#122D43
 Alt: #030504
 Gold: #89623D
 */
-/* Estilos del header*/
+
+@font-face {
+    font-family: 'icomoon';
+    src:  url('../fonts/icomoon.eot?rjo76b');
+    src:  url('../fonts/icomoon.eot?rjo76b#iefix') format('embedded-opentype'),
+      url('../fonts/icomoon.ttf?rjo76b') format('truetype'),
+      url('../fonts/icomoon.woff?rjo76b') format('woff'),
+      url('../fonts/icomoon.svg?rjo76b#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+  }
+  
+  [class^="icon-"], [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+  
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  .icon-menu:before {
+    content: "\e900";
+  }
+
 body
 {
     font-family: Lato, Arial, Helvetica, sans-serif;
