--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,7 @@ h2
     flex-wrap: wrap;
     justify-content: space-between;
     overflow: hidden;
+    margin-left: 10px;
 }
 
 .hero_image
@@ -411,6 +412,24 @@ h2
     flex-wrap: inherit;
 }
 
+.burger_button
+{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: none;
+    background-color: rgba(0, 0, 0, .8);
+    /* display: block; */
+    line-height: 40px;
+    text-align: center;
+    position: fixed;
+    z-index: 4;
+    left: 5px;
+    top: 5px;
+    color: white;
+    /* font-size: 50px; */
+}
+
 /* Desktop first: MQ se empieza desde el mas grande */
 
 @media screen and (max-width: 1200px)
@@ -460,7 +479,10 @@ h2
 
 @media screen and (max-width: 767px){
 
-
+    .burger_button
+    {
+        display: block;
+    }
 
 
     .header
@@ -480,9 +502,39 @@ h2
         justify-content: center;
     }
 
+    .header a
+    {
+        justify-content: center;
+        height: 40px;
+        font-size: 2em;
+        text-decoration: underline;
+        margin-bottom: .5em; 
+    }
+
     .header .logo
     {
         text-align: center;
+    }
+    .menu
+    {
+        position: fixed;
+        background-color: rgba(19 , 19 , 19, 0.8);
+        z-index: 3;
+        top: 0;
+        left: -100vw;
+        bottom: 0;
+        width: 100vw;
+        /* height: auto; */
+        bottom: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: .3s;
+    }
+
+    .menu.is_active
+    {
+        left: 0;
     }
 
     h2
@@ -578,22 +630,25 @@ h2
 
 .youtube_video
  {
-   /* width: 100%;
-    max-width: 100%;
+    /* max-width: 100%;
     height: auto; */
     position: absolute;
     top: 0;
     bottom: 0;
     right: 0;
     left: 0;
+    /* Si se le quitan todos los margenes  
+    se deber[ia aumentar el h y el w en 100% */
+    width: 100%;
+    height: 100%;
     /* z-index: 3; */
 }
 
 .flexible_video
 {
-    width: 100%;
+    max-width: 100%;
     height: 0;
-    padding-top: 60%;
+    padding-top: 56.25%;
     position: relative;
 }
 
