Arreglo de bug burgerButton. Padding de portfolio arreglado en 1200px

--- a/css/styles.css
+++ b/css/styles.css
@@ -434,7 +434,10 @@ h2
 
 @media screen and (max-width: 1200px)
 {  
-    
+    .portfolio
+    {
+        padding: 0;
+    }
 
     .container
     {
