--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,8 @@ Gold: #89623D
 body
 {
     font-family: Lato, Arial, Helvetica, sans-serif;
-     background-color: #252524; 
+     /* background-color: #252524;  */
+     background-color: #FFFFFF; 
      margin: 0;
 }
 
@@ -124,7 +125,7 @@ h1
     font-size: 40px;
     line-height: 1.5em;
     letter-spacing: -.2px;
-    color: whitesmoke;
+    color: black;
     margin: 0;
 
 }
@@ -157,7 +158,7 @@ h2
 .hero
 {
     height: 100%;
-    background-color: #252524;
+    /* background-color: #252524; */
     /* background-position-x: right; */
     display: flex;  
     align-items: center;
@@ -178,7 +179,7 @@ h2
 {
     /* border: 1px solid lightgray; */
     margin-bottom: 20px;
-    background: #252524;
+    /* background: #252524; */
     align-items: center;
     justify-content: space-between;
 }
